--- a/src/HW/4/HW4.module.css
+++ b/src/HW/4/HW4.module.css
@@ -1,4 +1,9 @@
+
 .chetNechet {
   background-color: #1f1f1f;
   color: #8a8a8a;
+}
+s.chetNechet {
+  background-color: #8a8a8a;
+  color: hotpink;
 }
